--- a/image/spark/master/Dockerfile
+++ b/image/spark/master/Dockerfile
@@ -3,5 +3,6 @@ FROM jiaming/spark-base:latest
 ADD start.sh /
 ADD log4j.properties /opt/spark/conf/log4j.properties
 EXPOSE 7077 8080
+RUN chmod 755 /start.sh
 
-ENTRYPOINT ["/start.sh"]
+CMD ["/start.sh"]
