--- a/spark/images/master/Dockerfile
+++ b/spark/images/master/Dockerfile
@@ -1,4 +1,4 @@
-FROM jiaming/spark-base:latest
+FROM robinlin/spark-base:latest
 
 ADD start.sh /
 ADD log4j.properties /opt/spark/conf/log4j.properties
