1)add zeppelin-kubenetes template. 2)add spark-history service portal. 3) modify spark master access in zeppelin-env

--- a/spark/spark-worker-rc.yaml
+++ b/spark/spark-worker-rc.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: spark-worker-robin
-        image: robinlin/spark-worker
+        image: robinlin/spark-worker:1.5.1
         command:
          - /start.sh
         args: 
