--- a/spark/spark-master-rc.yaml
+++ b/spark/spark-master-rc.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: spark-master-robin
-        image: robinlin/spark-master
+        image: robinlin/spark-master:1.5.1
         command:
          - /start.sh
         args: 
