--- a/deploy-r-open/Dockerfile
+++ b/deploy-r-open/Dockerfile
@@ -7,7 +7,7 @@ ENV DEPLOYR_VERSION_MAJOR 8
 ENV DEPLOYR_VERSION_MINOR 0.0
 ENV RSERVER_VERSION_MAJOR 7
 ENV RSERVER_VERSION_MINOR 4.2
-ENV HOST_SERVER_IP 140.92.2.194
+ENV HOST_SERVER_IP deploy-r.web
 
 RUN yum clean all && \
     yum update -y && \
