--- a/base-jdk/image/Dockerfile
+++ b/base-jdk/image/Dockerfile
@@ -12,5 +12,14 @@ RUN mkdir /usr/share/java &&\
 RUN /bin/tar -zxvpf /root/jdk-8u66-linux-x64.tar.gz -C /usr/share/java/
 RUN rm -f /root/jdk-8u66-linux-x64.tar.gz
 
+# install maven
+RUN mkdir /usr/share/maven && \
+    wget http://www-us.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz -O ~/apache-maven-3.3.9-bin.tar.gz
+RUN /bin/tar -zxvpf /root/apache-maven-3.3.9-bin.tar.gz -C /usr/share/maven/
+RUN rm -f /root/apache-maven-3.3.9-bin.tar.gz
+
 ENV JAVA_HOME /usr/share/java/jdk1.8.0_66
 ENV PATH $PATH:$JAVA_HOME/bin
+
+ENV MAVEN_HOME /usr/share/maven/apache-maven-3.3.9 
+ENV PATH $PATH:$MAVEN_HOME/bin
