--- a/spark/images/zeppelin/docker/Dockerfile
+++ b/spark/images/zeppelin/docker/Dockerfile
@@ -54,6 +54,16 @@ RUN wget http://d3kbcqa49mib13.cloudfront.net/spark-${SPARK_VERSION}.tgz && \
     ln -s spark-${SPARK_VERSION} spark && \
     rm spark-${SPARK_VERSION}.tgz
 
+# install the xgboost
+ENV XGBOOST_HOME=/opt/xgboost \
+    PYTHONPATH=$XGBOOST_HOME/python-package
+
+RUN git clone --recursive https://github.com/dmlc/xgboost && \
+    cd xgboost; make -j4 && \
+    cd python-package; sudo python setup.py install && \
+    sudo apt-get install python-setuptools
+
+
 # credentials
 #RUN mkdir /root/.aws
 #ADD credentials /root/.aws/credentials
